--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,26 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+.active {
+  opacity: 1;
+  transform: translateX(-50%);
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.next {
+  opacity: 0;
+  transform: translateX(150%);
+}
+
+.prev {
+  opacity: 0;
+  transform: translateX(-150%);
+}
+
+.quoteActive {
+  opacity: 1;
+}
+
+.quoteUnmount {
+  opacity: 0;
 }
